[package]
name = "find_up"
version = "0.0.0"
edition = "2021"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
license = "MIT"
description = "Find a file or directory by walking up parent directories"
documentation = "https://docs.rs/find_up"
repository = "https://github.com/skribbledev/skribble/tree/main/crates/find_up"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.30"
typed-builder = "^0.10.0"
