[package]
name = "json_schemas"
version = "0.0.0"
edition = "2021"


[dependencies]
indexmap = { features = ["serde-1"], version = "1.8.0" }
lazy_static = "1.4.0"
regex = "1.5.4"
semver = "1.0.6"
serde = "1.0.136"
serde_json = { version = "1.0.79", features = ["preserve_order", "std"] }
validator = { version = "0.14.0", features = ["derive"] }

[build-dependencies]
schemars = "0.8.8"
serde_json = "1.0.79"
typify = "0.0.5"
