[package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
name = "skribble_css"
license = "MIT"
description = "Atomic CSS for your next frontend project"
version = "0.0.0"
homepage = "https://skribble.dev/"
documentation = "https://docs.rs/skribble_css"
repository = "https://github.com/skribbledev/skribble/tree/main/crates/skribble_css"

[lib]
crate-type = ["lib"]

[dependencies]
colorsys = "0.6.5"
heck = "0.4.0"
indexmap = { features = ["serde"], version = "1.8.0" }
indoc = "1.0.3"
readonly = "0.2.0"
regex = "1.5.4"
serde = "1.0.136"
serde_json = "1.0.79"
swc_atoms = "0.2.9"
swc_common = "0.17.8"
swc_ecmascript = { features = [
  "utils",
  "visit",
  "parser",
], version = "0.114.2" }

[dev-dependencies]
testing = "0.18.1"
walkdir = "2.3.2"
pretty_assertions = "1.1.0"
insta = "1.12.0"
