[package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
name = "skribble_css"
license = "MIT"
description = "Atomic CSS for your next frontend project"
version = "0.0.0"
homepage = "https://skribble.dev/"
documentation = "https://docs.rs/skribble_css"
repository = "https://github.com/skribbledev/skribble/tree/main/crates/skribble_css"
include = ["src/**/*.rs", "src/**/*.json", "Cargo.toml", "readme.md"]

[lib]
crate-type = ["lib"]

[features]
node = ["napi", "napi-derive"]

[dependencies]
colorsys = "0.6.5"
heck = "0.4.0"
indexmap = { features = ["serde-1"], version = "1.8.0" }
indoc = "1.0.4"
readonly = "0.2.0"
regex = "1.5.4"
serde = "1.0.136"
serde_json = "1.0.79"
swc_atoms = "0.2.9"
swc_common = "0.17.9"
swc_ecmascript = { features = [
  "utils",
  "visit",
  "parser",
], version = "0.127.0" } # versions 0.128+ are broken
thiserror = "1.0.30"
enum-ordinalize = "3.1.10"
parcel_css = "1.0.0-alpha.18"
parcel_sourcemap = "2.0.2"
lazy_static = "1.4.0"

[dependencies.napi-derive]
default-features = false
features = ["type-def"]
optional = true
version = "2.1.0"

[dependencies.napi]
default-features = false
features = ["napi4"]
optional = true
version = "2.1.0"

[dev-dependencies]
testing = "0.18.1"
pretty_assertions = "1.1.0"
insta = "1.13.0"
