[package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
name = "skribble_css"
license = "MIT"
description = "Atomic CSS for your next frontend project"
version = "0.0.0"
homepage = "https://skribble.dev/"
documentation = "https://docs.rs/skribble_css"
repository = "https://github.com/skribbledev/skribble/tree/main/crates/skribble_css"
include = ["src/**/*.rs", "src/**/*.json", "Cargo.toml", "readme.md"]

[lib]
crate-type = ["lib"]

[features]
node = ["napi", "napi-derive"]

[dependencies]
ast_node = "0.7.7"
colorsys = "0.6.5"
doc-comment = "0.3.3"
enum-ordinalize = "3.1.11"
find_up = { path = "../find_up" }
heck = "0.4.0"
indexmap = { features = ["serde-1"], version = "1.8.1" }
indoc = "1.0.4"
lazy_static = "1.4.0"
parcel_css = "1.0.0-alpha.21"
parcel_sourcemap = "2.0.2"
readonly = "0.2.0"
regex = "1.5.5"
serde = "1.0.136"
serde_json = "1.0.79"
swc_atoms = "0.2.11"
swc_common = "0.17.19"
swc_ecma_ast = "0.73.0"
swc_ecma_parser = "0.98.3"
swc_ecma_utils = "0.77.0"
swc_ecma_visit = "0.59.0"
thiserror = "1.0.30"

[dependencies.napi-derive]
default-features = false
features = ["type-def"]
optional = true
version = "2.2.0"

[dependencies.napi]
default-features = false
features = ["napi4"]
optional = true
version = "2.2.0"

[dev-dependencies]
testing = "0.19.1"
pretty_assertions = "1.2.0"
insta = "1.14.0"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
