[package]
edition = "2021"
name = "skribble_css_node"
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]


[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.1.0", default-features = false, features = ["napi4"] }
napi-derive = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
skribble_css = { path = "../skribble_css" }

[build-dependencies]
napi-build = "1.2.1"
